# secchat

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  Dockerfile  go.mod
backend/cmd/server/: main.go
backend/internal/api/: handlers.go  middleware.go  router.go
backend/internal/inbox/: broker.go
backend/internal/store/: housekeeping.go  queries.go  store.go
deploy/: .env.example  docker-compose.yml
deploy/tor/: Dockerfile  torrc
mobile/: .gitignore  App.tsx  README.md  app.json  onion.ts  package-lock.json  package.json
mobile/modules/secchat-core/: .gitignore  expo-module.config.json  package.json
mobile/modules/secchat-core/android/: build.gradle
mobile/modules/secchat-core/ios/: SecchatCore.podspec  SecchatCoreModule.swift
mobile/modules/secchat-core/src/: index.ts
mobile/src/: ErrorBoundary.tsx
mobile/src/api/: client.ts  groups.ts  inbox.ts  keypackages.ts  messages.ts  users.ts
mobile/src/config/: api.ts
mobile/src/crypto/: chat.ts  handle.ts  identity.ts  keypackage.ts  mls.ts  seed.ts  x25519.ts
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: ChatScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  NewChatScreen.tsx  SeedConfirmScreen.tsx  SeedDisplayScreen.tsx  WelcomeScreen.tsx
mobile/src/state/: auth.ts  conversations.ts  inbox.ts
mobile/src/storage/: conversations.ts  keystore.ts
native/secchat-core/: Cargo.toml  build.sh
native/secchat-core/src/: error.rs  identity.rs  lib.rs  mls.rs  tor.rs
scripts/: harden-server.sh  server-bootstrap.sh
web/: README.md  onion.ts
(+1 files in other folders)
